--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.0.7",
     "didyoumean2": "^7.0.4",
+    "framer-motion": "^12.5.0",
+    "lottie-react": "^2.4.1",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
