--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.0.7",
+    "chart.js": "^4.4.8",
     "didyoumean2": "^7.0.4",
     "framer-motion": "^12.5.0",
     "lottie-react": "^2.4.1",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
   },
